# setup-environment-ginos1998

./: .gitignore  CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: sum.h
lib/libsta/: CMakeLists.txt
lib/libsta/include/: substract.h
lib/libsta/src/: substract.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: program_test.c
